--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@sanderevans/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "An incomplete lotide library clone made for educational purposes.",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "tests"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/sander798/lotide.git"
   },
-  "author": "",
+  "author": "Alexander Evans",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sander798/lotide/issues"
